# paper-recommender

./: .env.example  .gitignore  MEMORY.md  README.md  pyproject.toml
.github/workflows/: digest.yml
docs/superpowers/plans/: 2026-04-24-paper-recommender.md
docs/superpowers/specs/: 2026-04-24-paper-recommender-design.md
src/recommender/: __init__.py  __main__.py  config.py  evaluate.py  interests.py  llm.py  mail.py  main.py  models.py  render.py  store.py  surprise.py
src/recommender/sources/: arxiv.py  huggingface.py  zotero.py
templates/: digest.md.j2
tests/: test_arxiv.py  test_config.py  test_evaluate.py  test_huggingface.py  test_interests.py  test_llm.py  test_mail.py  test_main.py  test_models.py  test_render.py  test_store.py  test_surprise.py  test_zotero.py
tests/fixtures/: arxiv_sample.atom  hf_daily_sample.json  zotero_sample.json
