[project]
name = "paper-recommender"
version = "0.1.0"
description = "Daily ML paper digest scored against personal interests"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.50.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
